--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,9 @@
   ],
   "rules": {
     "no-unused-vars": "off",
+    "prefer-const": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "@typescript-eslint/no-var-requires": "off"
+    "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
