--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,8 +12,10 @@
   "rules": {
     "no-unused-vars": "off",
     "prefer-const": "off",
+    "no-empty": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-var-requires": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-empty-function": "off"
   }
 }
