--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@fastify/swagger": "^7.4.1",
     "@prisma/client": "^4.2.1",
     "dotenv": "^16.0.1",
     "fastify": "^4.5.2",
-    "zod": "^3.18.0"
+    "fastify-zod": "^1.1.0",
+    "zod": "^3.18.0",
+    "zod-to-json-schema": "^3.17.1"
   }
 }
