--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@fastify/rate-limit": "^7.3.0",
     "@fastify/swagger": "^7.4.1",
     "@prisma/client": "^4.2.1",
     "dotenv": "^16.0.1",
