--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/simple-logging-server?schema=public"
 PORT=4500
+DEFAULT_NUM_OF_MONTHS_TO_DELETE=8
