--- a/.github/workflows/two_weeks_log_clearing.yml
+++ b/.github/workflows/two_weeks_log_clearing.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Hit the clear logs endpoint
         run: |
           curl --url '${{ secrets.APP_CLEAR_LOGS_ENDPOINT }}' \
-          --header 'X-APP-CLIENT-ID: ${{ secrets.APP_CLEAR_LOGS_CLIENT_ID }}'
+          --header 'X-APP-SERVICE-ID: ${{ secrets.APP_CLEAR_LOGS_CLIENT_ID }}'
