--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/simple-logging-serve
 PORT=4500
 DEFAULT_NUM_OF_MONTHS_TO_DELETE=8
 SERVER_URI="http://localhost:4500"
+FREEZE_DB_WRITES="false"
