--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-logging-server",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "",
   "private": true,
   "main": "dist/index.js",
@@ -25,6 +25,7 @@
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "drizzle-kit": "^0.19.3",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -39,8 +40,10 @@
     "@fastify/rate-limit": "^7.6.0",
     "@prisma/client": "^4.8.1",
     "dotenv": "^16.0.3",
+    "drizzle-orm": "^0.27.0",
     "fastify": "^4.11.0",
     "fastify-zod": "^1.2.0",
+    "postgres": "^3.3.5",
     "zod": "^3.21.4",
     "zod-to-json-schema": "^3.20.1"
   }
