--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@fastify/rate-limit": "^7.6.0",
+    "@paralleldrive/cuid2": "^2.2.1",
     "@prisma/client": "^4.8.1",
     "dotenv": "^16.0.3",
     "drizzle-orm": "^0.27.0",
