--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-logging-server",
-  "version": "1.3.0",
+  "version": "1.4.1",
   "description": "",
   "private": true,
   "main": "dist/index.js",
@@ -13,10 +13,10 @@
     "build:kill-dist": "rimraf ./dist",
     "build:code": "tsc",
     "build": "npm run build:kill-dist && npm run build:code",
-    "postinstall": "prisma generate",
     "migrate": "prisma migrate dev",
-    "db:push": "prisma db push",
-    "db:explorer": "prisma studio"
+    "db:explorer": "prisma studio",
+    "db:migrate-generate": "drizzle-kit generate:pg",
+    "db:migrate-run": "ts-node ./migrator.ts"
   },
   "keywords": [],
   "author": "Sean Cassiere",
@@ -25,22 +25,24 @@
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "drizzle-kit": "^0.19.3",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.1",
-    "prisma": "^4.8.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "@fastify/rate-limit": "^7.6.0",
-    "@prisma/client": "^4.8.1",
+    "@paralleldrive/cuid2": "^2.2.1",
     "dotenv": "^16.0.3",
+    "drizzle-orm": "^0.27.0",
     "fastify": "^4.11.0",
     "fastify-zod": "^1.2.0",
+    "postgres": "^3.3.5",
     "zod": "^3.21.4",
     "zod-to-json-schema": "^3.20.1"
   }
