chore: remove requirement of ?scheme=public since drizzle doesn't support it

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/simple-logging-server?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/simple-logging-server"
 PORT=4500
 DEFAULT_NUM_OF_MONTHS_TO_DELETE=8
 SERVER_URI="http://localhost:4500"
