--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-logging-server",
-  "version": "2.0.1",
-  "description": "",
+  "version": "2.0.2",
+  "description": "This is a simple API for logging messages",
   "private": true,
   "main": "dist/index.js",
   "scripts": {
