--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,15 +14,16 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      # This step uses the actions/setup-node action to set up a Node.js environment on the runner.
       - name: Setup Node.js 18
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      #This step runs npm ci to install any dependencies listed in your package.json file.
+      # This step runs npm ci to install any dependencies listed in your package.json file.
       - name: Install dependencies
         run: npm ci
 
-      #This step runs the build script if there is one specified under the scripts key in your package.json file.
+      # This step runs the build script if there is one specified under the scripts key in your package.json file.
       - name: Build
         run: npm run build --if-present
