--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,10 +1,18 @@
 name: "🐛 Bug report"
 description: Create a report to help us improve
+title: "[Bug]: "
+labels:
+  - "bug"
+
 body:
   - type: markdown
     attributes:
       value: |
         Thank you for reporting an issue :pray:.
+        We kindly ask that you search to see if an issue [already exists](https://github.com/SeanCassiere/simple-logging-server/issues?q=is%3Aissue+sort%3Acreated-desc+) for your bug.
+
+        We are also happy to accept contributions from our users. For more details see [here](https://github.com/SeanCassiere/simple-logging-server/blob/master/CONTRIBUTION.md).
+
   - type: textarea
     id: description
     attributes:
@@ -12,6 +20,7 @@ body:
       description: Provide a clear and concise description of the challenge you are running into.
     validations:
       required: true
+
   - type: input
     id: link
     attributes:
@@ -24,6 +33,7 @@ body:
       placeholder: Reproduction URL/Repo
     validations:
       required: false
+
   - type: textarea
     id: steps
     attributes:
@@ -36,6 +46,7 @@ body:
         4. See error
     validations:
       required: true
+
   - type: textarea
     id: expected
     attributes:
@@ -45,6 +56,7 @@ body:
         As a user, I expected ___ behavior but i am seeing ___
     validations:
       required: true
+
   - type: textarea
     id: screenshots_or_videos
     attributes:
@@ -55,6 +67,7 @@ body:
         to the following link: https://docs.github.com/en/github/writing-on-github/working-with-advanced-formatting/attaching-files
       placeholder: |
         You can drag your video or image files inside of this editor ↓
+
   - type: textarea
     id: platform
     attributes:
@@ -64,6 +77,7 @@ body:
         - Node Version: [e.g. 18.7.1, 20.0.0]
     validations:
       required: true
+
   - type: textarea
     id: additional
     attributes:
