build: update the build script to use pnpm

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "NODE_ENV=development nodemon",
     "build:kill-dist": "rimraf ./dist",
     "build:code": "tsc",
-    "build": "npm run build:kill-dist && npm run build:code",
+    "build": "pnpm run build:kill-dist && pnpm run build:code",
     "db:explorer": "drizzle-kit studio --port 3590",
     "db:migrate-generate": "drizzle-kit generate:pg",
     "db:migrate-run": "ts-node ./migrator.ts"
