--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "start": "NODE_ENV=production node dist/index.js",
     "dev": "NODE_ENV=development nodemon",
+    "test": "vitest --typecheck",
     "build:kill-dist": "rimraf ./dist",
     "build:code": "tsc",
     "build": "pnpm run build:kill-dist && pnpm run build:code",
@@ -33,7 +34,8 @@
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
     "@fastify/rate-limit": "^9.1.0",
