--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:kill-dist": "rimraf ./dist",
     "build:code": "tsc",
     "build": "pnpm run build:kill-dist && pnpm run build:code",
-    "db:explorer": "drizzle-kit studio --port 3590",
+    "db:explorer": "drizzle-kit studio",
     "db:migrate-generate": "drizzle-kit generate:pg",
     "db:migrate-run": "ts-node ./migrator.ts"
   },
@@ -25,7 +25,7 @@
     "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
-    "drizzle-kit": "^0.20.9",
+    "drizzle-kit": "^0.22.7",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
@@ -41,10 +41,10 @@
     "@fastify/rate-limit": "^9.1.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "dotenv": "^16.3.1",
-    "drizzle-orm": "^0.29.3",
+    "drizzle-orm": "^0.31.2",
     "fastify": "^4.25.2",
     "fastify-zod": "^1.4.0",
-    "postgres": "^3.4.3",
+    "postgres": "^3.4.4",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.22.3"
   }
