chore: swap `nodemon + ts-node` for `tsx`

--- a/package.json
+++ b/package.json
@@ -9,31 +9,30 @@
     "lint:fix": "eslint --fix --max-warnings=0 src",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "start": "NODE_ENV=production node dist/index.js",
-    "dev": "NODE_ENV=development nodemon",
+    "dev": "NODE_ENV=development tsx --watch ./src/index.ts",
     "test": "vitest --typecheck",
     "build:kill-dist": "rimraf ./dist",
     "build:code": "tsc",
     "build": "pnpm run build:kill-dist && pnpm run build:code",
     "db:explorer": "drizzle-kit studio",
     "db:migrate-generate": "drizzle-kit generate:pg",
-    "db:migrate-run": "ts-node ./migrator.ts"
+    "db:migrate-run": "tsx ./migrator.ts"
   },
   "keywords": [],
   "author": "Sean Cassiere",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.10.6",
+    "@types/node": "^20.14.3",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
     "drizzle-kit": "^0.22.7",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
-    "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.15.6",
     "typescript": "^5.3.3",
     "vitest": "^1.6.0"
   },
