build: set packageManager to pnpm@9.3.0

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a simple API for logging messages",
   "private": true,
   "main": "dist/index.js",
-  "packageManager": "pnpm@latest",
+  "packageManager": "pnpm@9.3.0",
   "scripts": {
     "lint": "eslint --max-warnings=0 src",
     "lint:fix": "eslint --fix --max-warnings=0 src",
