--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-logging-server",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "This is a simple API for logging messages",
   "private": true,
   "main": "dist/index.js",
@@ -40,11 +40,13 @@
   },
   "dependencies": {
     "@fastify/rate-limit": "^9.1.0",
+    "@hono/node-server": "^1.11.4",
     "@paralleldrive/cuid2": "^2.2.2",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
     "fastify": "^4.25.2",
     "fastify-zod": "^1.4.0",
+    "hono": "^4.4.7",
     "postgres": "^3.4.4",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.22.3"
