--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "vitest --typecheck",
     "test:ci": "vitest run --typecheck",
     "build:kill-dist": "rimraf ./dist",
-    "build:code": "tsc",
+    "build:code": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist",
     "build": "pnpm run build:kill-dist && pnpm run build:code",
     "db:explorer": "drizzle-kit studio",
     "db:migrate-generate": "drizzle-kit generate:pg",
@@ -34,21 +34,18 @@
     "pg": "^8.12.0",
     "prettier": "^3.3.2",
     "rimraf": "^5.0.7",
+    "tscpaths": "^0.0.9",
     "tsx": "^4.15.7",
     "typescript": "^5.5.2",
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@fastify/rate-limit": "^9.1.0",
     "@hono/node-server": "^1.11.4",
     "@paralleldrive/cuid2": "^2.2.2",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
-    "fastify": "^4.25.2",
-    "fastify-zod": "^1.4.0",
     "hono": "^4.4.7",
     "postgres": "^3.4.4",
-    "zod": "^3.23.8",
-    "zod-to-json-schema": "^3.22.3"
+    "zod": "^3.23.8"
   }
 }
