--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
     "hono": "^4.4.7",
+    "hono-rate-limiter": "^0.3.0",
     "postgres": "^3.4.4",
     "zod": "^3.23.8"
   }
