--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@hono/node-server": "^1.11.4",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@scalar/hono-api-reference": "^0.5.77",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
     "hono": "^4.4.7",
