--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "simple-logging-server",
-  "version": "2.2.0",
+  "license": "MIT",
+  "version": "2.3.0",
   "description": "This is a simple API for logging messages",
+  "author": "Sean Cassiere",
+  "keywords": [],
   "private": true,
-  "main": "dist/index.js",
   "packageManager": "pnpm@9.3.0",
+  "main": "dist/index.js",
   "scripts": {
     "lint": "eslint --max-warnings=0 src",
     "lint:fix": "eslint --fix --max-warnings=0 src",
@@ -14,39 +17,38 @@
     "test": "vitest --typecheck",
     "test:ci": "vitest run --typecheck",
     "build:kill-dist": "rimraf ./dist",
-    "build:code": "tsc",
+    "build:code": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist",
     "build": "pnpm run build:kill-dist && pnpm run build:code",
+    "postbuild": "node postbuild.mjs",
     "db:explorer": "drizzle-kit studio",
     "db:migrate-generate": "drizzle-kit generate:pg",
     "db:migrate-run": "tsx ./migrator.ts"
   },
-  "keywords": [],
-  "author": "Sean Cassiere",
-  "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.14.3",
+    "@types/node": "^20.14.8",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
     "drizzle-kit": "^0.22.7",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
-    "pg": "^8.11.3",
-    "prettier": "^3.1.1",
-    "rimraf": "^5.0.5",
-    "tsx": "^4.15.6",
-    "typescript": "^5.3.3",
+    "pg": "^8.12.0",
+    "prettier": "^3.3.2",
+    "rimraf": "^5.0.7",
+    "tscpaths": "^0.0.9",
+    "tsx": "^4.15.7",
+    "typescript": "^5.5.2",
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@fastify/rate-limit": "^9.1.0",
+    "@hono/node-server": "^1.11.4",
     "@paralleldrive/cuid2": "^2.2.2",
-    "dotenv": "^16.3.1",
+    "@scalar/hono-api-reference": "^0.5.77",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
-    "fastify": "^4.25.2",
-    "fastify-zod": "^1.4.0",
+    "hono": "^4.4.7",
+    "hono-rate-limiter": "^0.3.0",
     "postgres": "^3.4.4",
-    "zod": "^3.22.4",
-    "zod-to-json-schema": "^3.22.3"
+    "zod": "^3.23.8"
   }
 }
