--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-logging-server",
   "license": "MIT",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "This is a simple API for logging messages",
   "author": "Sean Cassiere",
   "keywords": [],
@@ -14,8 +14,8 @@
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "start": "NODE_ENV=production node dist/index.js",
     "dev": "NODE_ENV=development tsx --watch ./src/index.ts",
-    "test": "vitest --typecheck",
-    "test:ci": "vitest run --typecheck",
+    "test": "vitest",
+    "test:ci": "vitest run",
     "build:kill-dist": "rimraf ./dist",
     "build:code": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist",
     "build": "pnpm run build:kill-dist && pnpm run build:code",
@@ -38,6 +38,7 @@
     "tscpaths": "^0.0.9",
     "tsx": "^4.15.7",
     "typescript": "^5.5.2",
+    "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
   },
   "dependencies": {
