test: undo the health check tests
undoing the tests I addeding to ping the health check since it was erroring out on the DB_URL and PORT variables, will figure this out at a later poitn

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "start": "NODE_ENV=production node dist/index.js",
     "dev": "NODE_ENV=development tsx --watch ./src/index.ts",
-    "test": "vitest",
-    "test:ci": "vitest run",
+    "test": "NODE_ENV=test vitest",
+    "test:ci": "NODE_ENV=ci vitest run",
     "build:kill-dist": "rimraf ./dist",
     "build:code": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist",
     "build": "pnpm run build:kill-dist && pnpm run build:code",
