--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "build": "pnpm run build:kill-dist && pnpm run build:code",
     "postbuild": "node postbuild.mjs",
     "db:explorer": "drizzle-kit studio",
-    "db:migrate-generate": "drizzle-kit generate:pg",
-    "db:migrate-run": "tsx ./migrator.ts"
+    "db:migrate-generate": "drizzle-kit generate",
+    "db:migrate-run": "drizzle-kit migrate"
   },
   "devDependencies": {
     "@types/node": "^20.14.8",
@@ -45,10 +45,12 @@
     "@hono/node-server": "^1.11.4",
     "@paralleldrive/cuid2": "^2.2.2",
     "@scalar/hono-api-reference": "^0.5.77",
+    "arctic": "^1.9.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
     "hono": "^4.4.7",
     "hono-rate-limiter": "^0.3.0",
+    "lucia": "^3.2.0",
     "postgres": "^3.4.4",
     "zod": "^3.23.8"
   }
