feat: adding in an auth layer for to prep for viewing services (#39)
* chore: update migration snapshots

* feat: update database schema and generate the migration files

* feat: correct database migration

* feat: lucia configuration

* feat: correctly mapping the many-to-many relations

* feat: better migration I think

* feat: add auth

* feat: allow for tenants to have multiple services

* feat: redo the migration allowing for a workspace id to be set

* feat: migrations

* feat: basic working auth

* feat: detect the key type

* chore: update the .env.example

* chore: rename to `key_prefix`

* feat: restructure the directories for an app

* feat: ui should be separate

* refactor: folder rename

* chore: tsx

* refactor: esm and jsx

* feat: basis

* chore: typing

* chore: meta tags

* feat: actually getting something that resembles ui

* chore: update drizzle config to point at the right schema file

* feat: basic routing for viewing

* feat: add dummy pages

* chore: bump package.json t 2.3.2

* chore: spacing

* chore: bump baseline runtime deps

* chore: drizzle-kit

* chore: remove the migrator script

* chore: set packageManager field to 9.4.0 in the package.json

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ PORT=4500
 DEFAULT_NUM_OF_MONTHS_TO_DELETE=8
 SERVER_URI="http://localhost:4500"
 FREEZE_DB_WRITES="false"
+
+GITHUB_CLIENT_ID="xxxx"
+GITHUB_CLIENT_SECRET="xxxx"
