--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
   "name": "simple-logging-server",
   "license": "MIT",
-  "version": "2.3.1",
+  "version": "2.3.2",
   "description": "This is a simple API for logging messages",
   "author": "Sean Cassiere",
   "keywords": [],
   "private": true,
-  "packageManager": "pnpm@9.3.0",
-  "main": "dist/index.js",
+  "packageManager": "pnpm@9.4.0",
+  "main": "dist/index.mjs",
+  "type": "module",
   "scripts": {
     "lint": "eslint --max-warnings=0 src",
     "lint:fix": "eslint --fix --max-warnings=0 src",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "start": "NODE_ENV=production node dist/index.js",
-    "dev": "NODE_ENV=development tsx --watch ./src/index.ts",
+    "start": "NODE_ENV=production node dist/index.mjs",
+    "dev": "NODE_ENV=development tsx --watch ./src/index.mts",
     "test": "NODE_ENV=test vitest",
     "test:ci": "NODE_ENV=ci vitest run",
     "build:kill-dist": "rimraf ./dist",
-    "build:code": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist",
+    "build:code": "tsc && tsc-alias",
     "build": "pnpm run build:kill-dist && pnpm run build:code",
     "postbuild": "node postbuild.mjs",
     "db:explorer": "drizzle-kit studio",
-    "db:migrate-generate": "drizzle-kit generate:pg",
-    "db:migrate-run": "tsx ./migrator.ts"
+    "db:migrate-generate": "drizzle-kit generate",
+    "db:migrate-run": "drizzle-kit migrate"
   },
   "devDependencies": {
     "@types/node": "^20.14.8",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
-    "drizzle-kit": "^0.22.7",
+    "drizzle-kit": "^0.22.8",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "pg": "^8.12.0",
     "prettier": "^3.3.2",
     "rimraf": "^5.0.7",
-    "tscpaths": "^0.0.9",
+    "tsc-alias": "^1.8.10",
     "tsx": "^4.15.7",
     "typescript": "^5.5.2",
     "vite-tsconfig-paths": "^4.3.2",
@@ -44,11 +45,13 @@
   "dependencies": {
     "@hono/node-server": "^1.11.4",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@scalar/hono-api-reference": "^0.5.77",
+    "@scalar/hono-api-reference": "^0.5.87",
+    "arctic": "^1.9.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
-    "hono": "^4.4.7",
-    "hono-rate-limiter": "^0.3.0",
+    "hono": "^4.4.10",
+    "hono-rate-limiter": "^0.4.0",
+    "lucia": "^3.2.0",
     "postgres": "^3.4.4",
     "zod": "^3.23.8"
   }
