chore: one more item for the vscode config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,5 @@
       "source.organizeImports": "explicit"
     }
   },
-  "conventionalCommits.scopes": ["api-v2", "ui"]
+  "conventionalCommits.scopes": ["auth", "ui", "api-v2"]
 }
