--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,42 +7,9 @@ on:
     branches: [master]
 
 jobs:
-  test:
-    name: test
+  pr-check:
+    name: pr-check
     runs-on: ubuntu-latest
-    steps:
-      # This step uses the actions/checkout action to download a copy of your repository on the runner.
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      # This step uses the pnpm/action-setup action to set up pnpm on the runner.
-      - name: Install pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: 9
-
-      # This step uses the actions/setup-node action to set up a Node.js environment on the runner.
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: .nvmrc
-          cache: pnpm
-
-      # This step runs the install script for the selected node package manager.
-      - name: Install dependencies
-        run: pnpm install
-
-      # This step runs the test script if there is one specified under the scripts key in your package.json file.
-      - name: Test
-        run: pnpm test:ci
-
-  build:
-    name: build
-    needs: [test]
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20]
     steps:
       # This step uses the actions/checkout action to download a copy of your repository on the runner.
       - name: Checkout repo
@@ -68,3 +35,7 @@ jobs:
       # This step runs the build script if there is one specified under the scripts key in your package.json file.
       - name: Build
         run: pnpm build
+
+      # This step runs the test script if there is one specified under the scripts key in your package.json file.
+      - name: Test
+        run: pnpm test:ci
