--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.8",
+    "@types/pg": "^8.11.10",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
     "drizzle-kit": "^0.27.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
-    "pg": "^8.12.0",
     "prettier": "^3.3.2",
     "rimraf": "^5.0.7",
     "tsc-alias": "^1.8.10",
@@ -52,7 +52,7 @@
     "hono": "^4.4.11",
     "hono-rate-limiter": "^0.4.0",
     "lucia": "^3.2.0",
-    "postgres": "^3.4.4",
+    "pg": "^8.13.1",
     "zod": "^3.23.8"
   }
 }
