--- a/package.json
+++ b/package.json
@@ -21,19 +21,21 @@
     "build:code": "tsc && tsc-alias",
     "build": "pnpm run build:kill-dist && pnpm run build:code",
     "postbuild": "node postbuild.mjs",
-    "db:explorer": "drizzle-kit studio",
-    "db:migrate-generate": "drizzle-kit generate",
-    "db:migrate-run": "drizzle-kit migrate"
+    "db:studio": "drizzle-kit studio",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:check": "drizzle-kit check",
+    "db:up": "drizzle-kit up"
   },
   "devDependencies": {
     "@types/node": "^20.14.8",
+    "@types/pg": "^8.11.10",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
-    "drizzle-kit": "^0.22.8",
+    "drizzle-kit": "^0.27.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
-    "pg": "^8.12.0",
     "prettier": "^3.3.2",
     "rimraf": "^5.0.7",
     "tsc-alias": "^1.8.10",
@@ -48,11 +50,11 @@
     "@scalar/hono-api-reference": "^0.5.92",
     "arctic": "^1.9.1",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.31.2",
+    "drizzle-orm": "^0.36.0",
     "hono": "^4.4.11",
     "hono-rate-limiter": "^0.4.0",
     "lucia": "^3.2.0",
-    "postgres": "^3.4.4",
+    "pg": "^8.13.1",
     "zod": "^3.23.8"
   }
 }
