--- a/package.json
+++ b/package.json
@@ -28,19 +28,19 @@
     "db:up": "drizzle-kit up"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@types/node": "^20.14.8",
     "@types/pg": "^8.11.10",
-    "@typescript-eslint/eslint-plugin": "^6.18.0",
-    "@typescript-eslint/parser": "^6.18.0",
     "drizzle-kit": "^0.27.1",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.2",
+    "eslint": "^9.20.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "prettier": "^3.3.2",
     "rimraf": "^5.0.7",
     "tsc-alias": "^1.8.10",
     "tsx": "^4.15.7",
     "typescript": "^5.5.2",
+    "typescript-eslint": "^8.24.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
   },
