--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "lint": "eslint --max-warnings=0 src",
     "lint:fix": "eslint --fix --max-warnings=0 src",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "format": "prettier --write .",
     "start": "NODE_ENV=production node dist/index.mjs",
     "dev": "NODE_ENV=development tsx --watch ./src/index.mts",
     "test": "NODE_ENV=test vitest",
@@ -28,33 +28,34 @@
     "db:up": "drizzle-kit up"
   },
   "devDependencies": {
-    "@types/node": "^20.14.8",
-    "@types/pg": "^8.11.10",
-    "@typescript-eslint/eslint-plugin": "^6.18.0",
-    "@typescript-eslint/parser": "^6.18.0",
-    "drizzle-kit": "^0.27.1",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.2",
-    "prettier": "^3.3.2",
-    "rimraf": "^5.0.7",
+    "@eslint/js": "^9.20.0",
+    "@types/node": "^22.13.1",
+    "@types/pg": "^8.11.11",
+    "drizzle-kit": "^0.30.4",
+    "eslint": "^9.20.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^15.14.0",
+    "prettier": "^3.5.0",
+    "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.10",
-    "tsx": "^4.15.7",
-    "typescript": "^5.5.2",
-    "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.5"
   },
   "dependencies": {
-    "@hono/node-server": "^1.12.0",
+    "@hono/node-server": "^1.13.8",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@scalar/hono-api-reference": "^0.5.92",
-    "arctic": "^1.9.1",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.36.0",
-    "hono": "^4.4.11",
-    "hono-rate-limiter": "^0.4.0",
-    "lucia": "^3.2.0",
+    "@scalar/hono-api-reference": "^0.5.172",
+    "arctic": "^3.2.4",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.3",
+    "hono": "^4.7.0",
+    "hono-rate-limiter": "^0.4.2",
+    "lucia": "^3.2.2",
     "pg": "^8.13.1",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   }
 }
